--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,75 +1,153 @@
-
-  <!-- buttons to select start / stop recording or save track -->
-
-  <ion-fab slot="fixed" horizontal="center" vertical="top" class="top-safe" >
-    <ion-row>
-      @if (ts.state == 'inactive') {
-        <ion-fab-button id="start" (click)="startTracking()">
-          <ion-icon name="play"></ion-icon>
-        </ion-fab-button>
-      }
-      @if (ts.state == 'tracking') {
-        <ion-fab-button id="stop" (click)="confirm('stop')">
-          <ion-icon name="pause"></ion-icon>
-        </ion-fab-button>
-      }
-      <ion-fab-button id="alert" (click)="waypoint()">
-        <ion-icon name="alert"></ion-icon>
-      </ion-fab-button>
-      @if (ts.state == 'stopped') {
-        <ion-fab-button id="save" (click)="setTrackDetails()">
-          <ion-icon name="save"></ion-icon>
-        </ion-fab-button>
-      }
-      @if (ts.state === 'stopped' || ts.state === 'saved') {
-        <ion-fab-button id="trash" (click)="confirm('delete')">
-          <ion-icon name="trash"></ion-icon>
-        </ion-fab-button>
-      }
-
-      <div style="width: 40px;"></div>
-
-      <ion-fab-button id='search' (click)="search()">
-        <ion-icon name="pin"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button id='help' (click)="guide()">
-        <ion-icon name="help"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button id='search' (click)="mapService.cycleZoom()">
-        <ion-icon name="search"></ion-icon>
-      </ion-fab-button>
-    </ion-row>
-  </ion-fab>
-
-  <ion-content>
-    <div id="map-wrapper">
-      <div id="map"></div>
+<!-- FAB button -->
+<ion-fab slot="fixed" horizontal="center" vertical="top" class="top-safe">
+  <ion-row>
+    <div class="record-button" (click)="presentRecordPopover()">
+      <ion-icon name="recording-sharp"></ion-icon>
+      <span>{{ 'RECORD.BUTTON' | translate }}</span>
     </div>
-    <div class="safe-area"></div>
-  </ion-content>
+    <div class="record-button" (click)="presentSearchPopover()">
+      <ion-icon name="help-sharp"></ion-icon>
+      <span>{{ 'SEARCH.BUTTON' | translate }}</span>
+    </div>
+    <div class="record-button" (click)="mapService.cycleZoom()">
+      <ion-icon name="search-sharp"></ion-icon>
+      <span>Zoom</span>
+    </div>
+  </ion-row>
+</ion-fab>
 
-  <!-- space for android controls -->
-  <div class="bottom-safe-gray"></div>
+<!-- Regular content -->
+<ion-content>
+  <div id="map-wrapper">
+    <div id="map"></div>
+  </div>
+  <div class="safe-area"></div>
+</ion-content>
 
-  <!-- Navigation buttons -->
-    <ion-fab
-      slot="fixed"
-      horizontal="center"
-      vertical="bottom"
-      class="bottom-safe"
-    >
-      <ion-row>
-        <ion-fab-button (click)="fs.gotoPage('canvas')">
-          <ion-icon name="analytics"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button (click)="fs.gotoPage('archive')">
-          <ion-icon name="list"></ion-icon>
-        </ion-fab-button>
-        <ion-fab-button (click)="fs.gotoPage('settings')">
-          <ion-icon name="settings"></ion-icon>
-        </ion-fab-button>
-      </ion-row>
-    </ion-fab>
+<!-- Navigation buttons (unchanged) -->
+<ion-fab slot="fixed" horizontal="center" vertical="bottom" class="bottom-safe">
+  <ion-row>
+    <ion-fab-button (click)="fs.gotoPage('canvas')">
+      <ion-icon name="analytics"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button (click)="fs.gotoPage('archive')">
+      <ion-icon name="list"></ion-icon>
+    </ion-fab-button>
+    <ion-fab-button (click)="fs.gotoPage('settings')">
+      <ion-icon name="settings"></ion-icon>
+    </ion-fab-button>
+  </ion-row>
+</ion-fab>
 
+<!-- The popover itself -->
+<ion-popover
+  [isOpen]="isRecordPopoverOpen"
+  (didDismiss)="isRecordPopoverOpen = false"
+>
+  <ng-template>
+    <ion-list>
+      <ion-item
+        button
+        [disabled]="fs.state!='inactive'"
+        [class.enabled]="fs.state==='inactive'"
+        (click)="startTracking(); closeRecordPopover()"
+      >
+        {{ 'RECORD.START_TRACKING' | translate }}
+      </ion-item>
+      <ion-item
+        button
+        [disabled]="fs.state!='tracking'"
+        [class.enabled]="fs.state==='tracking'"
+        (click)="waypoint(); closeRecordPopover()"
+      >
+        {{ 'RECORD.WAYPOINT' | translate }}
+      </ion-item>
+      <ion-item
+        button
+        [disabled]="fs.state!='tracking'"
+        [class.enabled]="fs.state==='tracking'"
+        (click)="confirmStop()"
+      >
+        {{ 'RECORD.STOP_TRACKING' | translate }}
+      </ion-item>
+      <ion-item
+        button
+        [disabled]="fs.state!='stopped'"
+        [class.enabled]="fs.state==='stopped'"
+        (click)="setTrackDetails(); closeRecordPopover()"
+      >
+        {{ 'RECORD.SAVE_TRACK' | translate }}
+      </ion-item>
+      <ion-item
+        button
+        [disabled]="fs.state != 'stopped' && fs.state != 'saved'"
+        [class.enabled]="fs.state==='stopped' || fs.state==='saved'"
+        (click)="confirmDeletion()"
+      >
+        {{ 'RECORD.REMOVE_TRACK' | translate }}
+      </ion-item>
+    </ion-list>
+  </ng-template>
+</ion-popover>
 
+<ion-popover
+  [isOpen]="isConfirmStopOpen"
+  (didDismiss)="closeAllPopovers()"
+>
+  <ng-template>
+    <ion-list>
+      <ion-item lines="none">
+        <ion-label><strong>{{ 'RECORD.CONFIRM_STOP' | translate }}</strong></ion-label>
+      </ion-item>
+      <ion-item button id="ok" (click)="yesConfirmStop(true)">
+        {{ 'RECORD.STOP_YES' | translate }}
+      </ion-item>
+      <ion-item button id="cancel" (click)="yesConfirmStop(false)">
+        {{ 'RECORD.STOP_NO' | translate }}
+      </ion-item>
+    </ion-list>
+  </ng-template>
+</ion-popover>
 
+<ion-popover
+  [isOpen]="isConfirmDeletionOpen"
+  (didDismiss)="closeAllPopovers()"
+>
+  <ng-template>
+    <ion-list>
+      <ion-item lines="none">
+        <ion-label><strong>{{ 'RECORD.CONFIRM_DELETION' | translate }}</strong></ion-label>
+      </ion-item>
+      <ion-item button id="ok" (click)="yesConfirmDeletion(true)">
+        {{ 'RECORD.DELETE_YES' | translate }}
+      </ion-item>
+      <ion-item button id="cancel" (click)="yesConfirmDeletion(false)">
+        {{ 'RECORD.DELETE_NO' | translate }}
+      </ion-item>
+    </ion-list>
+  </ng-template>
+</ion-popover>
+
+<ion-popover
+  [isOpen]="isSearchPopoverOpen"
+  (didDismiss)="isSearchPopoverOpen = false"
+>
+  <ng-template>
+    <ion-list>
+      <ion-item
+        button
+        [class.enabled] = true
+        (click)="search(); closeSearchPopover()"
+      >
+        {{ 'SEARCH.LOCATION'| translate }}
+      </ion-item>
+      <ion-item
+        button
+        [class.enabled] = true
+        (click)="guide(); closeSearchPopover()"
+      >
+        {{ 'SEARCH.ROUTE' | translate }}
+      </ion-item>
+    </ion-list>
+  </ng-template>
+</ion-popover>
